multitenancy-benchmarks/require-namespace-quota/.chainsaw-test/bad-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bad-testing-ns
spec: {}
