multitenancy-benchmarks/require-namespace-quota/.chainsaw-test/good-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: good-testing-ns
spec: {}
