multitenancy-benchmarks/require-namespace-quota/.chainsaw-test/chainsaw-enforce-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-namespace-quota
spec:
  validationFailureAction: Enforce
